--- a/views/layouts/sysinfo/processes.pug
+++ b/views/layouts/sysinfo/processes.pug
@@ -116,8 +116,9 @@ block scripts
   script.
     function checkOne(ele){
         if (ele.length > 0) {
-          $('div[class="end"]').each(function(){
-              $(this).attr('disabled',false)
-          })
+          //- $('div[class="end"]').each(function(){
+          //-     $(this).attr('disabled',false)
+          //- })
+          alert()
         }
     }
