--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -36,7 +36,7 @@ html
       .clearfix
         footer
           .container-fluid
-            p.copyright &copy; 2017 RPiMonSys. All Rights Reserved.
+            p.copyright &copy; 2017 RPiMonSys. All Rights Reserved
 
     // END WRAPPER
     // Javascript
