--- a/views/layouts/sysinfo/processes.pug
+++ b/views/layouts/sysinfo/processes.pug
@@ -73,7 +73,7 @@ block content
                   each val in list
                     tr
                       td
-                        input(type='checkbox', onchange='checkOne($(this))') 
+                        input(type='checkbox') 
                       td= val.pid
                       td= val.nice
                       td= val.pcpu
