--- a/views/layouts/sysinfo/processes.pug
+++ b/views/layouts/sysinfo/processes.pug
@@ -33,8 +33,8 @@ block content
             .col-md-4
               button.btn.btn-primary Refresh
               button.btn-danger.btn.end(disabled='') End process
-              .btn-group.priority
-                button.btn.btn-default.dropdown-toggle(disabled='', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+              .btn-group
+                button.btn.btn-default.dropdown-toggle.priority(disabled='', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                   | Set priority 
                   span.caret
                 ul.dropdown-menu
@@ -89,8 +89,8 @@ block content
             .col-md-4
               button.btn.btn-primary Refresh
               button.btn-danger.btn.end(disabled='') End process
-              .btn-group.priority
-                button.btn.btn-default.dropdown-toggle(disabled='', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
+              .btn-group
+                button.btn.btn-default.dropdown-toggle.priority(disabled='', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false')
                   | Set priority 
                   span.caret
                 ul.dropdown-menu
