--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1663,7 +1663,7 @@ ul.activity-list>li .timestamp {
 .profile-header .profile-main {
     position: relative;
     padding: 20px;
-    background-image: url("../../assets/img/profile-bg.png");
+    background-image: url("../../public/images/profile-bg.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
