--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -97,8 +97,8 @@ block content
                       | You have visited 
                       a(href='/admin') Dashboard 
                       |  for the first time at
-                      a= first_activities.FirstVisitedAt
-                      span.timeago.timestamp(datetime=user.FirstVisited)
+                      a= first_activities.FirstVisitedDashboard
+                      span.timeago.timestamp(datetime=user.FirstVisitedDashboard)
                   li
                     i.fa.fa-check.activity-icon
                     p
