--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -26,10 +26,10 @@ block content
                     span Activies
                   .col-md-4.stat-item
                     | Joined on
-                    span #{first_activities.CreatedAt}
+                    span.dt #{first_activities.CreatedAt}
                   .col-md-4.stat-item
                     | Verified on 
-                    span #{first_activities.VerifiedAt}
+                    span.dt #{first_activities.VerifiedAt}
             // END PROFILE HEADER
             // PROFILE DETAIL
             .profile-detail
@@ -38,7 +38,7 @@ block content
                 ul.list-unstyled.list-justify
                   li
                     | Birthdate 
-                    span.date #{user.Birthdate}
+                    span.dt #{user.Birthdate}
                   li
                     | Hometown 
                     span #{user.HomeTown}
@@ -97,13 +97,13 @@ block content
                       | You have visited 
                       a(href='/admin') Dashboard 
                       |  for the first time at 
-                      a= first_activities.FirstVisitedDashboard
+                      a.dt= first_activities.FirstVisitedDashboard
                       span.timeago.timestamp(datetime=user.FirstVisitedDashboard)
                   li
                     i.fa.fa-check.activity-icon
                     p
                       | First login at 
-                      a= first_activities.FirstLoginAt
+                      a.dt= first_activities.FirstLoginAt
                       span.timeago.timestamp(datetime=first_activities.FirstLoginAt)
                   li
                     i.fa.fa-check.activity-icon
@@ -116,7 +116,7 @@ block content
                         | Your account haven't been confirmed. Please check your email to verify this account
                   li
                     i.fa.fa-check.activity-icon
-                    p
+                    p.dt
                       | Joined on #{first_activities.CreatedAt} 
                       span.timeago.timestamp(datetime=first_activities.CreatedAt)
                 .margin-top-30.text-center
