--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -23,7 +23,7 @@ block content
                 .row
                   if user.Role = 'Admin'
                     .col-md-4.stat-item
-                      | Admin
+                      | Administrator
                       span
                         i.fa.fa-shield
                   else
