--- a/views/layouts/partials/nav.pug
+++ b/views/layouts/partials/nav.pug
@@ -55,10 +55,32 @@ nav.navbar.navbar-default.navbar-fixed-top
                   i.lnr.lnr-home
                   span AdminCP
             li
-              a(href='/account/preferences')
+              a(href='#', data-toggle="modal" data-keyboard="false" data-backdrop="static" data-target="#myModal")
                 i.lnr.lnr-cog
                 span Preferences
             li
               a(href='/logout')
                 i.lnr.lnr-exit
                 span Logout
+  #myModal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
+    .modal-dialog(role='document')
+      .modal-content
+        .modal-header
+          h4#myModalLabel.modal-title Preferences
+        .modal-body
+          .row
+            .col-md-9
+              h4.heading
+                b Notifications
+              label.fancy-checkbox
+                input#chkNotification(type='checkbox')
+                span Allows push notification
+            .col-md-4
+              h4.heading
+                b Languages
+              select.form-control
+                option(value='en') English
+                option(value='vn') Tiếng Việt
+        .modal-footer
+          button.btn.btn-default(type='button', data-dismiss='modal') Cancel
+          button#btnSaveChanges.btn.btn-primary(type='button') Save changes
