--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -49,6 +49,6 @@ html
     script(src='../../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
     script(src='../../public/vendor/chartist/js/chartist.min.js')
     script(src='../../public/js/common.js')
-    //- script(src='../../public/js/socketProcessor.js')
+    script(src='../../public/js/socketProcessor.js')
     script(src='../../public/js/tablefilter.js')
     block scripts
