--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -47,7 +47,7 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js')
     script(src='../../public/vendor/jquery-slimscroll/jquery.slimscroll.min.js')
     script(src='../../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
-    script(src='../../public/vendor/chartist/js/chartist.min.js')
+    script(src='//code.highcharts.com/highcharts.js')
     script(src='../../public/js/common.js')
     script(src='../../public/js/socketProcessor.js')
     script(src='../../public/js/tablefilter.js')
