--- a/views/layouts/layout.pug
+++ b/views/layouts/layout.pug
@@ -42,12 +42,13 @@ html
     // Javascript
     script(src="../../public/vendor/jquery/jquery.min.js")
     script(src='../../public/vendor/bootstrap/js/bootstrap.min.js')
+    script(src='../../public/vendor/hightcharts/highcharts.js')
+    script(src='../../public/vendor/hightcharts/exporting.js')
     script(src='../../public/js/jquery.timeago.min.js')
     script(src='../../public/js/soundmanager2-jsmin.js')
     script(src='//cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.4/socket.io.js')
     script(src='../../public/vendor/jquery-slimscroll/jquery.slimscroll.min.js')
     script(src='../../public/vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js')
-    script(src='//code.highcharts.com/highcharts.js')
     script(src='../../public/js/common.js')
     script(src='../../public/js/socketProcessor.js')
     script(src='../../public/js/tablefilter.js')
