edit Title Register

--- a/views/register.pug
+++ b/views/register.pug
@@ -31,7 +31,7 @@ html(lang='en')
                 fieldset
                   .form-top
                     .form-top-left
-                      h3 Step 1 / 2
+                      h3 #{title}
                       p Set up your account:
                     .form-top-right
                       i.fa.fa-key
