--- a/views/login.pug
+++ b/views/login.pug
@@ -43,7 +43,7 @@ html(lang='en')
                       label(for='form-password') Password
                       input#form-password.form-password.form-control(type='password', name='password', placeholder='Password...')
                     .pull-left
-                      a.btn.btn-lg.btn-success(href="/register") Đăng ký
+                      a.btn.btn-lg(href="/register") Register
                     .pull-right
                       button.btn(type='submit') Login
                     .clearfix
