--- a/views/layouts/sysinfo/processes.pug
+++ b/views/layouts/sysinfo/processes.pug
@@ -86,6 +86,27 @@ block content
                       td= val.mem_vsz
                       td= val.started
           .row
+            .col-md-12
+              nav(aria-label='Page navigation')
+                ul.pagination
+                  li
+                    a(href='#', aria-label='Previous')
+                      span(aria-hidden='true') «
+                  li
+                    a(href='#') 1
+                  li
+                    a(href='#') 2
+                  li
+                    a(href='#') 3
+                  li
+                    a(href='#') 4
+                  li
+                    a(href='#') 5
+                  li
+                    a(href='#', aria-label='Next')
+                      span(aria-hidden='true') »
+
+          .row
             .col-md-4
               button.btn.btn-primary Refresh
               button.btn-danger.btn.end(disabled='') End process
