--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -115,16 +115,13 @@ block content
                   li
                     i.fa.fa-check.activity-icon
                     if first_activities.Verified == true
-                      p.dt
-                        | Account has been verified at #{first_activities.VerifiedAt}
+                      p.dt Account has been verified at #{first_activities.VerifiedAt}
                         span.timeago.timestamp(datetime=first_activities.VerifiedAt)
                     else
-                      p
-                        | Your account haven't been confirmed. Please check your email to verify this account
+                      p Your account haven't been confirmed. Please check your email to verify this account
                   li
                     i.fa.fa-check.activity-icon
-                    p.dt
-                      | Joined on #{first_activities.CreatedAt} 
+                    p.dt Joined on #{first_activities.CreatedAt} 
                       span.timeago.timestamp(datetime=first_activities.CreatedAt)
                 .margin-top-30.text-center
             // END TABBED CONTENT
