--- a/views/layouts/sysinfo/cpu.pug
+++ b/views/layouts/sysinfo/cpu.pug
@@ -19,7 +19,7 @@ block content
                 .col-md-9
                   h4.heading
                     b Overall Utilization
-                  #cpu-usage-chart.ct-chart
+                  #cpu-usage-chart
                 .col-md-3
                   .weekly-summary.text-right.bottom
                     span#cpu-freq.number #{cpuCurrentspeed}
