--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -45,7 +45,7 @@ block content
                   span.title Active network connections
           .row
             .col-md-9
-              #headline-chart.ct-chart
+              #cpu-usage-chart
             .col-md-3
               .weekly-summary.text-right
                 span.number #{cores}
