--- a/views/register.pug
+++ b/views/register.pug
@@ -27,7 +27,7 @@ html(lang='en')
                   | #{title}
           .row
             .col-sm-6.col-sm-offset-3.form-box
-              form.registration-form(role='form', action='', method='post')
+              form.registration-form(role='form', action='/register', method='post')
                 fieldset
                   .form-top
                     .form-top-left
@@ -38,13 +38,13 @@ html(lang='en')
                   .form-bottom
                     .form-group
                       label(for='form-username') Username
-                      input#form-username.form-username.form-control(type='text', name='form-username', placeholder='Username...')
+                      input#form-username.form-username.form-control(type='text', name='username', placeholder='Username...')
                     .form-group
                       label(for='form-email') Email
-                      input#form-email.form-email.form-control(type='text', name='form-email', placeholder='Email...')
+                      input#form-email.form-email.form-control(type='text', name='email', placeholder='Email...')
                     .form-group
                       label(for='form-password') Password
-                      input#form-password.form-password.form-control(type='password', name='form-password', placeholder='Password...')
+                      input#form-password.form-password.form-control(type='password', name='password', placeholder='Password...')
                     .form-group
                       label(for='form-repeat-password') Repeat password
                       input#form-repeat-password.form-repeat-password.form-control(type='password', name='form-repeat-password', placeholder='Repeat password...')
