--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -127,15 +127,18 @@ block content
             // END TABBED CONTENT
 
             ul.nav.nav-tabs
-              li
-                a(href='#home', data-toggle='tab')
+              li.active
+                a(href='#credential', data-toggle='tab')
                   | Account 
               li
                 a(href='#info', data-toggle='tab')
+                  | PROFILE
+              li
+                a(href='#passwordTab', data-toggle='tab')
                   | PROFILE 
             .tab-content
-              #home.tab-pane
-                form.form-auth-small(action='index.php')
+              #credential.tab-pane
+                form.form-auth-small(action='/account/edit/credential')
                   .form-group
                     label.control-label(for='username') Username
                     input#edit-email.form-control(type='username', value='', placeholder='Username')
@@ -150,7 +153,7 @@ block content
                     input#edit-repeat-password.form-control(type='repeat-password', placeholder='Password')
                   button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
               #info.tab-pane
-                form.form-auth-small(action='index.php')
+                form.form-auth-small(action='/account/edit/info')
                   .form-group
                     label.control-label(for='fullname') Full name
                     input#edit-full.form-control(type='text', value='', placeholder='Fullname')
@@ -167,6 +170,15 @@ block content
                     label.control-label(for='mobile') Mobile
                     input#edit-mobile.form-control(type='text', placeholder='Mobile')
                   button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
+                #passwordTab.tab-pane
+                  form.form-auth-small(action='/account/edit/password')
+                    .form-group
+                      label.control-label(for='password') Password
+                      input#edit-password.form-control(type='password', placeholder='Password')
+                    .form-group
+                      label.control-label(for='repeat-password') Repeat Password
+                      input#edit-repeat-password.form-control(type='repeat-password', placeholder='Password')
+                    button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
 
           // END RIGHT COLUMN
   // END MAIN CONTENT
