--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -129,19 +129,16 @@ block content
             ul.nav.nav-tabs
               li.active
                 a(href='#credential', data-toggle='tab')
-                  | Account 
+                  | Password 
               li
                 a(href='#info', data-toggle='tab')
-                  | PROFILE
-              li
-                a(href='#passwordTab', data-toggle='tab')
-                  | PROFILE 
+                  | Profile
             .tab-content
               #credential.tab-pane
                 form.form-auth-small(action='/account/edit/credential')
                   .form-group
                     label.control-label(for='username') Username
-                    input#edit-email.form-control(type='username', value='', placeholder='Username')
+                    input#edit-email.form-control(type='username', value='', placeholder='Username', disabled)
                   .form-group
                     label.control-label(for='email') Email
                     input#edit-email.form-control(type='email', value='', placeholder='Email')
@@ -170,15 +167,6 @@ block content
                     label.control-label(for='mobile') Mobile
                     input#edit-mobile.form-control(type='text', placeholder='Mobile')
                   button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
-                #passwordTab.tab-pane
-                  form.form-auth-small(action='/account/edit/password')
-                    .form-group
-                      label.control-label(for='password') Password
-                      input#edit-password.form-control(type='password', placeholder='Password')
-                    .form-group
-                      label.control-label(for='repeat-password') Repeat Password
-                      input#edit-repeat-password.form-control(type='repeat-password', placeholder='Password')
-                    button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
 
           // END RIGHT COLUMN
   // END MAIN CONTENT
