--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -134,7 +134,7 @@ block content
                 a(href='#info', data-toggle='tab')
                   | Profile
             .tab-content
-              #credential.tab-pane
+              #credential.tab-pane.active
                 form.form-auth-small(action='/account/edit/credential')
                   .form-group
                     label.control-label(for='username') Username
