--- a/views/layouts/profile/profile.pug
+++ b/views/layouts/profile/profile.pug
@@ -138,10 +138,10 @@ block content
                 form.form-auth-small(action='/account/edit/credential')
                   .form-group
                     label.control-label(for='username') Username
-                    input#edit-email.form-control(type='username', value='', placeholder='Username', disabled)
+                    input#edit-email.form-control(type='username', name="username" value='', placeholder='Username', disabled)
                   .form-group
                     label.control-label(for='password') Password
-                    input#edit-password.form-control(type='password', placeholder='Password')
+                    input#edit-password.form-control(type='password', name="password" placeholder='Password')
                   .form-group
                     label.control-label(for='repeat-password') Repeat Password
                     input#edit-repeat-password.form-control(type='repeat-password', placeholder='Password')
@@ -150,22 +150,22 @@ block content
                 form.form-auth-small(action='/account/edit/info')
                   .form-group
                     label.control-label(for='fullname') Full name
-                    input#edit-full.form-control(type='text', value='', placeholder='Fullname')
+                    input#edit-full.form-control(type='text', name="fullname" value='', placeholder='Fullname')
                   .form-group
                     label.control-label(for='email') Email
-                    input#edit-email.form-control(type='email', value='', placeholder='Email')
+                    input#edit-email.form-control(type='email', name="email" value='', placeholder='Email')
                   .form-group
                     label.control-label(for='birthdate') Birthdate
-                    input#edit-birthdate.form-control(type='text', value='', placeholder='birthday')
+                    input#edit-birthdate.form-control(type='text', name="birthdate" value='', placeholder='birthday')
                   .form-group
                     label.control-label(for='hometown') Hometown
-                    input#edit-hometown.form-control(type='text', placeholder='Hometown')
+                    input#edit-hometown.form-control(type='text', name="hometown" placeholder='Hometown')
                   .form-group
                     label.control-label(for='current-city') Current city
-                    input#edit-current-city.form-control(type='text', placeholder='Current city')
+                    input#edit-current-city.form-control(type='text', name="currentcity" placeholder='Current city')
                   .form-group
                     label.control-label(for='mobile') Mobile
-                    input#edit-mobile.form-control(type='text', placeholder='Mobile')
+                    input#edit-mobile.form-control(type='text', name="phone" placeholder='Mobile')
                   button.btn.btn-primary.btn-lg.btn-block(type='submit') Update
 
           // END RIGHT COLUMN
