--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -22,7 +22,7 @@ block content
                   #memory-usage-chart.ct-chart
                 .col-md-3
                   .weekly-summary.text-right.bottom
-                    span#memPercent.data.number 40% (398.8 MB)
+                    span#memPercent.data.number
                     span.info-label In use
                   .weekly-summary.text-right.bottom
                     span#memUsage.data.number 997 MB
