--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -20,14 +20,14 @@ block content
                 span.icon
                   i.fa.fa-microchip
                 p
-                  span.number 17%
+                  span.number#cpu-percent
                   span.title CPU Usage
             .col-md-3
               .metric
                 span.icon
                   i.fa.fa-building-o
                 p
-                  span.number 52%
+                  span.number#memPercent
                   span.title RAM Usage
             .col-md-3
               .metric
