--- a/views/layouts/sysinfo/general.pug
+++ b/views/layouts/sysinfo/general.pug
@@ -51,7 +51,7 @@ block content
                 span.number #{cores}
                 span.info-label Cores
               .weekly-summary.text-right
-                span.number #{speed}
+                span.number#cpu-freq
                 span.info-label Current speed
       // END OVERVIEW
       .row
