--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -23,15 +23,15 @@ block content
                 .col-md-3
                   .weekly-summary.text-right.bottom
                     span#memPercent.data.number
-                    span.info-label In use
+                    span.info-label In use #{inused}
                   .weekly-summary.text-right.bottom
-                    span#memUsage.data.number 997 MB
+                    span#memUsage.data.number #{total}
                     span.info-label Total
                   .weekly-summary.text-right.bottom
-                    span#swapUsage.data.number 20 MB
+                    span#swapUsage.data.number #{swap_used}
                     span.info-label Swap in used
                   .weekly-summary.text-right.bottom
-                    span#swapTotal.data.number 10 GB
+                    span#swapTotal.data.number #{swap_total}
                     span.info-label Swap total
               .row.container-fluid
                 .col-md-3
