--- a/views/layouts/sysinfo/memory.pug
+++ b/views/layouts/sysinfo/memory.pug
@@ -22,8 +22,8 @@ block content
                   #memory-usage-chart.ct-chart
                 .col-md-3
                   .weekly-summary.text-right.bottom
-                    span#memPercent.data.number
-                    span.info-label In use #{inused}
+                    span#memPercent.data.number #{inused}
+                    span.info-label In use 
                   .weekly-summary.text-right.bottom
                     span#memUsage.data.number #{total}
                     span.info-label Total
